# aydn

./: .env.example  .gitignore  ANTIGRAVITY_SETUP.md  Makefile  QUICK_START.md  README.md  README.old.md  RUN_WEB.md  USAGE.md  devcontainer.json  pyproject.toml  requirements-dev.txt  requirements.txt  start_web.sh
JARVIS_Complete/: .env.example  HIZLI_BASLANGIC.txt  KLASOR_YAPISI.txt  run.sh  setup.sh
JARVIS_Complete/examples/prompts/: general_assistant.txt
JARVIS_Complete/jarvis/: __init__.py  config.py  jarvis.py
JARVIS_Complete/tests/: test_app.py  test_config.py  test_models.py
examples/: colab_notebook.py  demo.py  scenario_campaign_analysis.py  scenario_golden_rules.py  scenario_stock_crisis.py
examples/prompts/: amazon_ppc_expert.txt  python_code_reviewer.txt
src/: app.py  jarvis_cli.py
src/analyzers/: __init__.py  brand_dominance.py  keyword_volume.py  price_barrier.py  triangulation.py
src/api/: __init__.py  base.py  helium10.py  keepa.py  sellersprite.py
src/cli/: app.py
src/core/: __init__.py  config.py  models.py
src/decision/: __init__.py  scoring.py
src/jarvis/: ai_engine.py  models.py  prompt_library.py  screen_capture.py  voice.py
src/ppc_agent/: __init__.py  cli.py  friday_agent.py  models.py  monday_agent.py  scrapers.py  storage.py
src/reports/: __init__.py  csv_reporter.py  json_reporter.py
src/utils/: __init__.py  logger.py
src/web/: app.py
tests/: test_app.py  test_price_barrier.py  test_prompt_library.py  test_scoring.py
tests/core/: test_metrics.py
tests/decision/: test_acos_manager.py
(+8 files in other folders)
