[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aydn"
version = "0.1.0"
description = "JARVIS - Sesli + Ekran AI Asistan"
authors = [{ name = "AYDIN" }]
dependencies = []

[project.scripts]
jarvis = "jarvis_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
